--- a/test/index.html
+++ b/test/index.html
@@ -1,4 +1,5 @@
 <!doctype html>
+<meta charset=utf-8>
 <style>
   body {
     color: white;
@@ -6,9 +7,13 @@
   }
 </style>
 <x-foo foo=bar></x-foo>
+<!-- BABEL POLYFILL FOR IE11 -->
+<script src=https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.6.15/browser-polyfill.min.js></script>
+<!-- WEB COMPONENTS POLYFILL -->
+<script src=https://cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/0.7.22/webcomponents.min.js></script>
 <script src=../index.js></script>
 <script>
-  setTimeout(() => { module.import('x-foo');});
-  setTimeout(() => { module.import('x-get');});
-  setTimeout(() => { module.import('x-test');});
+  setTimeout(() => { module.import('x-foo');},  100);
+  setTimeout(() => { module.import('x-get');},  200);
+  setTimeout(() => { module.import('x-test');}, 300);
 </script>
